Switching to build ReactiveCocoa via Carthage instead of Cocoapods and see if it fixes Circle compilation

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,9 @@ build/*
 # Exclude OS X folder attributes
 .DS_Store
 
-# Exclude Cocoapods local files
+# Exclude Cocoapods & carthage local files
 Pods/*
+Carthage/*
 
 # Exclude user-specific XCode 3 and 4 files
 *.mode1
