--- a/circle.yml
+++ b/circle.yml
@@ -9,21 +9,18 @@ machine:
     CRASHLYTICS_FRAMEWORK_PATH: Pods/CrashlyticsFramework/Crashlytics.framework
 
 dependencies:
+  override:
   pre:
     - brew update
     - brew upgrade xctool
-    - brew install carthage
     - sudo gem uninstall highline commander --ignore-dependencies -x
     - sudo gem install cocoapods -v $(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
     - sudo gem install cupertino shenzhen sigh
-  override:
-    - pod update Meteor Bond
-    - carthage bootstrap
-  post:
     - ./scripts/import_credentials.sh
+  override:
+    - pod update Meteor
   cache_directories:
     - "Pods"
-    - "Carthage"
 
 test:
   post:
@@ -36,7 +33,7 @@ test:
         mv Taylr.ipa $CIRCLE_ARTIFACTS/${BN}.ipa
         mv Taylr.app.dSYM.zip $CIRCLE_ARTIFACTS/${BN}.app.dSYM.zip
         ./scripts/circle_release_notes.sh >> $CIRCLE_ARTIFACTS/release_notes.txt
-      : timeout: 10800
+      : timeout: 1200
     - zip -FSr $CIRCLE_ARTIFACTS/Pods.zip Pods/
 
 #deployment:
