--- a/S10.xcodeproj/xcshareddata/xcschemes/Taylr.xcscheme
+++ b/S10.xcodeproj/xcshareddata/xcschemes/Taylr.xcscheme
@@ -3,7 +3,7 @@
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "NO">
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
