Force Circle to use adhoc profile for signing prod build

--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,9 @@ dependencies:
 test:
   post:
     # First build the core dependency so that later building of main target can be super fast
-    - xcodebuild -sdk iphoneos -workspace $XCODE_WORKSPACE -scheme "Core" -configuration 'Release' build | tee $CIRCLE_ARTIFACTS/core_build.log | xcpretty
+    - |
+      xcodebuild -sdk iphoneos -workspace $XCODE_WORKSPACE -scheme "Core" \
+       -configuration 'Release' build | tee $CIRCLE_ARTIFACTS/core_build.log | xcpretty
     - ? |
         source ./scripts/circle_env.sh
         ipa build --scheme Taylr \
@@ -69,6 +71,4 @@ deployment:
        ./scripts/deploy_crashlytics.sh
        cd $CIRCLE_ARTIFACTS
        cp "${BN}.ipa" "${BN}_appstore.ipa"
-       sigh resign "${BN}_appstore.ipa" \
-         --provisioning_profile "$HOME/Library/MobileDevice/Provisioning Profiles/tvs10taylrappstore.mobileprovision" \
-         --signing_identity "iPhone Distribution: S10 Inc. (227D5X5CZY)"
+       sigh resign "${BN}_appstore.ipa" -p "$APPSTORE_PROFILE_PATH" -i "$SIGNING_IDENTITY"
