--- a/Taylr/Taylr-Info.plist
+++ b/Taylr/Taylr-Info.plist
@@ -81,6 +81,12 @@
 		<string>TransatTextMedium.otf</string>
 		<string>TransatTextBold.otf</string>
 		<string>TransatTextBlack.otf</string>
+		<string>Cabin-Bold.ttf</string>
+		<string>Cabin-BoldItalic.ttf</string>
+		<string>Cabin-Italic.ttf</string>
+		<string>Cabin-Medium.ttf</string>
+		<string>Cabin-MediumItalic.ttf</string>
+		<string>Cabin-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
