--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-.idea
-**/.idea
+# Project Specific Excludes
 
 scripts/env.sh
-# Exclude the build directory
-build/*
- 
+
+###### Generic iOS project excludes
+
 # Exclude temp nibs and swap files
 *~.nib
 *.swp
@@ -12,16 +11,50 @@ build/*
 # Exclude OS X folder attributes
 .DS_Store
 
-# Exclude Cocoapods local files
-Pods/*
+# Exclude AppCode files
+.idea
+**/.idea
 
-# Exclude user-specific XCode 3 and 4 files
-*.mode1
-*.mode1v3
-*.mode2v3
-*.perspective
-*.perspectivev3
+# Xcode
+#
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## Build generated
+build/
+DerivedData
+
+## Various settings
 *.pbxuser
-*.xccheckout
-project.xcworkspace
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
 xcuserdata
+
+## Other
+*.xccheckout
+*.moved-aside
+*.xcuserstate
+*.xcscmblueprint
+
+## Obj-C/Swift specific
+*.hmap
+*.ipa
+
+# CocoaPods
+#
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
+#
+Pods/
+
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+Carthage/Checkouts
+
+Carthage/Build
