--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,8 @@ dependencies:
     - sudo gem install cupertino shenzhen sigh xcpretty
     - ./scripts/import_credentials.sh
   override:
+    - sudo gem install specific_install
+    - sudo gem specific_install https://github.com/CocoaPods/CocoaPods.git
     - pod update Meteor SugarRecord PKHUD
   cache_directories:
     - "Pods"
