Output to ipa file with build number as name

--- a/circle.yml
+++ b/circle.yml
@@ -40,6 +40,7 @@ test:
                   --export_method $EXPORT_METHOD \
                   --buildlog_path $CIRCLE_ARTIFACTS/build.log \
                   --output_directory $CIRCLE_ARTIFACTS
+                  --output_name ${BN}.ipa
         ./scripts/circle_release_notes.sh >> $CIRCLE_ARTIFACTS/release_notes.txt
       : timeout: 1200
     - zip -FSr $CIRCLE_ARTIFACTS/Pods.zip Pods/
