Download all videos, not just unread ones

--- a/circle.yml
+++ b/circle.yml
@@ -39,7 +39,7 @@ test:
                   --xcargs BUNDLE_BUILD=$BN \
                   --export_method $EXPORT_METHOD \
                   --buildlog_path $CIRCLE_ARTIFACTS/build.log \
-                  --output_directory $CIRCLE_ARTIFACTS
+                  --output_directory $CIRCLE_ARTIFACTS \
                   --output_name ${BN}.ipa
         ./scripts/circle_release_notes.sh >> $CIRCLE_ARTIFACTS/release_notes.txt
       : timeout: 1200
