--- a/circle.yml
+++ b/circle.yml
@@ -38,9 +38,10 @@ test:
                   --xcconfig Configs/${XCCONFIG_NAME}.xcconfig \
                   --xcargs BUNDLE_BUILD=$BN \
                   --export_method $EXPORT_METHOD \
-                  --buildlog_path $CIRCLE_ARTIFACTS/build.log \
+                  --buildlog_path $CIRCLE_ARTIFACTS \
                   --output_directory $CIRCLE_ARTIFACTS \
-                  --output_name ${BN}.ipa
+                  --output_name ${BN}_appstore.ipa \
+                  --provisioning_profile_path scripts/profiles/f331e97e-2ea1-426f-879e-972eaff3d115.mobileprovision
         ./scripts/circle_release_notes.sh >> $CIRCLE_ARTIFACTS/release_notes.txt
       : timeout: 1200
     - zip -FSr $CIRCLE_ARTIFACTS/Pods.zip Pods/
@@ -73,10 +74,6 @@ deployment:
    commands:
      - |
        source ./scripts/circle_env.sh
-       ./scripts/deploy_crashlytics.sh
        cd $CIRCLE_ARTIFACTS
-       cp "${BN}.ipa" "${BN}_appstore.ipa"
-       sigh resign "${BN}_appstore.ipa" --provisioning_profile "$APPSTORE_PROFILE_PATH" \
-        --signing_identity "$SIGNING_IDENTITY"
        ipa distribute:itunesconnect --apple-id 1015154738 --file "${BN}_appstore.ipa" --upload \
         --warnings --errors --account "$APPLE_ID" --password "$APPLE_ID_PASSWORD" --verbose
