Enable remote notification background mode, handle syncing from remote notification. Fix bug in ConversationViewModel related to participant

--- a/Taylr/Taylr-Info.plist
+++ b/Taylr/Taylr-Info.plist
@@ -115,6 +115,10 @@
 		<string>Cabin-MediumItalic.ttf</string>
 		<string>Cabin-Regular.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
