--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,10 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native": "^0.13.2"
+    "ddp-client": "^0.1.1",
+    "lodash": "^3.6.0",
+    "react-native": "^0.13.2",
+    "s10-common": "git+https://github.com/s10tv/s10-common.git",
+    "underscore": "^1.8.3"
   }
 }
