--- a/app/package.json
+++ b/app/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "Taylr",
-  "version": "0.2.1",
+  "name": "TaylrReact",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start"
+    "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
     "ddp-client": "^0.1.1",
     "lodash": "^3.6.0",
-    "react-native": "^0.13.2",
+    "react-native": "^0.12.0",
+    "react-native-overlay": "^0.3.0",
+    "react-native-search-bar": "^2.5.0",
     "s10-common": "git+https://github.com/s10tv/s10-common.git",
     "underscore": "^1.8.3"
   }
