--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ dependencies:
   override:
   pre:
     - brew update
-    - brew upgrade xctool
+    # - brew upgrade xctool
     - sudo gem uninstall highline commander --ignore-dependencies -x
     - sudo gem install cocoapods -v $(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
     - sudo gem install cupertino shenzhen sigh xcpretty gym
