Uninstall executables as well

--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ dependencies:
   pre:
     - brew update
     # - brew upgrade xctool
-    - sudo gem uninstall highline commander --ignore-dependencies -x
+    - sudo gem uninstall highline commander --ignore-dependencies -x -a
     - sudo gem install cocoapods -v $(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
     - sudo gem install cupertino shenzhen sigh xcpretty gym
     - ./scripts/import_credentials.sh
