--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "ddp-client": "^0.1.1",
     "lodash": "^3.6.0",
     "react-native": "^0.12.0",
+    "react-native-activity-view": "^0.2.7",
+    "react-native-button": "^1.2.1",
     "react-native-overlay": "^0.3.0",
     "react-native-search-bar": "^2.5.0",
     "s10-common": "git+https://github.com/s10tv/s10-common.git",
