--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TaylrReact",
+  "name": "Taylr",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
   "dependencies": {
     "ddp-client": "^0.1.1",
     "lodash": "^3.6.0",
-    "react-native": "^0.14.0",
+    "react-native": "^0.14.2",
     "react-native-button": "^1.2.1",
     "react-native-mail": "^0.2.4",
     "react-native-search-bar": "^2.5.0",
