--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,6 +30,8 @@ pod 'SDWebImage', '~> 3.7'
 # UI
 pod 'Cartography', '~> 0.6'
 pod 'EDColor', '~> 1.0'
+pod 'SwipeView', '~> 1.3'
+pod 'AMPopTip', '~> 0.9'
 
 # SDKs
 pod 'FBSDKLoginKit', '~> 4.6'
