--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lodash": "^3.6.0",
     "react-native": "^0.14.2",
     "react-native-button": "^1.2.1",
+    "react-native-fbsdkcore": "0.0.7",
+    "react-native-fbsdklogin": "0.0.7",
     "react-native-mail": "^0.2.4",
     "react-native-search-bar": "^2.5.0",
     "s10-common": "git+https://github.com/s10tv/s10-common.git",
