--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,9 +38,10 @@ pod 'FBSDKLoginKit', '~> 4.8'
 pod 'Fabric', '~> 1.6'
 pod 'TwitterCore', '~> 1.13'
 pod 'Digits', '~> 1.13'
+pod 'Crashlytics', '~> 3.4'
 
 # Logging & analytics
-pod 'Crashlytics', '~> 3.4'
+pod 'CocoaLumberjack/Swift', '~> 2.2'
 pod 'Ouralabs', '~> 2.6'
 
 pod 'AnalyticsSwift', '~> 0.2'
@@ -58,7 +59,7 @@ pod 'FormatterKit/TimeIntervalFormatter', '~> 1.8'
 pod 'PKHUD', :git => 'https://github.com/tonyxiao/PKHUD' # Fork is needed to work around xcasset compilation issue inside pod
 
 post_install do |installer|
-    app_plist = "Taylr/Taylr-Info.plist"
+    app_plist = "Taylr/Support/Taylr-Info.plist"
     plist_buddy = "/usr/libexec/PlistBuddy"
     version = `#{plist_buddy} -c "Print CFBundleShortVersionString" #{app_plist}`.strip
     puts "Updating CocoaPods' version numbers to #{version}"
