--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-fbsdklogin": "0.0.7",
     "react-native-mail": "^0.2.4",
     "react-native-search-bar": "^2.5.0",
+    "react-native-video": "^0.6.1",
     "s10-common": "git+https://github.com/s10tv/s10-common.git",
     "underscore": "^1.8.3"
   }
