--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,7 +18,7 @@ pod 'ReactiveCocoa', '~> 4.0.2-alpha-1'
 pod 'LayerKit', '~> 0.17'
 pod 'Atlas', '~> 1.0.15'
 pod 'SCRecorder', '2.5.3' # ScaleAspectFill bug
-# pod 'NKRecorder', :path => '../video-maker'
+# pod 'NKRecorder', :path => '../../video-maker'
 pod 'NKRecorder', :git => 'git@github.com:s10tv/video-maker.git'
 
 # Utils
