--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,7 @@ dependencies:
     - npm install
     # - brew upgrade xctool
     # - sudo gem uninstall highline commander --ignore-dependencies -x -a
-    - sudo gem install cocoapods -v $(var=$(tail -1 Podfile.lock); echo ${var##COCOAPODS:})
+    - sudo gem install cocoapods -v $(var=$(tail -1 ios/Podfile.lock); echo ${var##COCOAPODS:})
     # - sudo gem install cupertino shenzhen sigh xcpretty gym
     - ./scripts/import_credentials.sh
   override:
