--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,7 @@ pod 'Cartography', '~> 0.6'
 pod 'EDColor', '~> 1.0'
 pod 'SwipeView', '~> 1.3'
 pod 'AMPopTip', '~> 0.9'
+pod 'SVProgressHUD', '~> 2.0-beta'
 
 # SDKs
 pod 'FBSDKLoginKit', '~> 4.8'
@@ -58,7 +59,6 @@ pod 'Reveal-iOS-SDK', '~> 1.6', :configuration => ['Debug']
 # To Be Deprecated
 pod 'DateTools', '~> 1.7'
 pod 'FormatterKit/TimeIntervalFormatter', '~> 1.8'
-pod 'PKHUD', :git => 'https://github.com/tonyxiao/PKHUD' # Fork is needed to work around xcasset compilation issue inside pod
 
 post_install do |installer|
     plist_buddy = "/usr/libexec/PlistBuddy"
