--- a/ios/Configs/Dev.xcconfig
+++ b/ios/Configs/Dev.xcconfig
@@ -11,5 +11,5 @@ BUNDLE_DISPLAY_NAME = Taylr α
 CUSTOM_CODE_SIGN_IDENTITY = iPhone Developer
 FACEBOOK_APP_ID = 837780592942367
 FACEBOOK_DISPLAY_NAME = Taylr α
-ASSETCATALOG_COMPILER_APPICON_NAME = AppIconDev
+ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
 URL_SCHEME = taylr-dev
