--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react-native-fabric-digits": "^1.0.6",
     "react-native-fbsdkcore": "0.0.7",
     "react-native-fbsdklogin": "0.0.7",
-    "react-native-icons": "^0.6.3",
     "react-native-mail": "^0.2.4",
     "react-native-search-bar": "^2.5.0",
+    "react-native-tabbar": "^0.1.1",
     "react-native-video": "^0.6.1",
     "s10-common": "git+https://github.com/s10tv/s10-common.git",
     "underscore": "^1.8.3"
