--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-fabric-digits": "^1.0.6",
     "react-native-fbsdkcore": "0.0.7",
     "react-native-fbsdklogin": "0.0.7",
+    "react-native-grid-view": "^0.3.7",
     "react-native-mail": "^0.2.4",
     "react-native-search-bar": "^2.5.0",
     "react-native-tabbar": "^0.1.1",
