--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-native-fbsdkcore": "0.0.7",
     "react-native-fbsdklogin": "0.0.7",
     "react-native-grid-view": "^0.3.7",
+    "react-native-image-picker": "^0.9.0",
     "react-native-mail": "^0.2.4",
+    "react-native-overlay": "^0.3.0",
     "react-native-search-bar": "^2.5.0",
     "react-native-tabbar": "^0.1.1",
     "react-native-video": "^0.6.1",
