Update circle config for prod branch

--- a/circle.yml
+++ b/circle.yml
@@ -73,7 +73,7 @@ deployment:
                  --buildlog_path $CIRCLE_ARTIFACTS \
                  --output_directory $CIRCLE_ARTIFACTS \
                  --output_name ${BN}_appstore.ipa \
-                 --provisioning_profile_path scripts/profiles/54d025b0-0a94-4834-b795-8d5234608e52.mobileprovision
+                 --provisioning_profile_path ../scripts/profiles/54d025b0-0a94-4834-b795-8d5234608e52.mobileprovision
        cd $CIRCLE_ARTIFACTS
        ipa distribute:itunesconnect --apple-id 1015154738 --file "${BN}_appstore.ipa" --upload \
         --warnings --errors --account "$APPLE_ID" --password "$APPLE_ID_PASSWORD" --verbose
