--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
+    "apphub": "^0.2.2",
     "ddp-client": "^0.1.1",
     "lodash": "^3.6.0",
     "react-native": "^0.14.2",
