Integrate BranchMetrics, send AppEvent for deep linking info https://app.asana.com/0/34520227311296/68072752841784

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -55,6 +55,7 @@ pod 'ARAnalytics', :subspecs => [
   # 'Intercom'
 ]
 pod 'Intercom', '~> 2.3'
+pod 'Branch', '~> 0.11'
 # Disabling UXCam for dev builds until motion detection interference is fixed
 pod 'UXCam', '~> 2.4', :configuration => ['Release']
 
