--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-fabric-digits": "^1.0.6",
     "react-native-fbsdkcore": "0.0.7",
     "react-native-fbsdklogin": "0.0.7",
+    "react-native-floating-label-text-input": "0.0.2",
     "react-native-grid-view": "^0.3.7",
     "react-native-image-picker": "^0.9.0",
     "react-native-overlay": "^0.3.0",
