--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-image-picker": "^0.9.0",
     "react-native-overlay": "^0.3.0",
     "react-native-search-bar": "^2.5.0",
+    "react-native-tab-navigator": "^0.2.11",
     "react-native-tabbar": "^0.1.1",
     "react-native-video": "^0.6.1",
     "s10-common": "git+https://github.com/s10tv/s10-common.git",
