--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
-  "whitelist": [
-    "es7.classProperties",
-    "es7.decorators"
-  ]
+    "whitelist": [
+        "es7.classProperties",
+        "es7.decorators",
+        "es7.asyncFunctions",
+        "regenerator"
+    ]
 }
