Adding fastlane to automate the entire iOS build process. Get rid of bundle build in favor of Fastlane agvtool

--- a/ios/Taylr/Support/Taylr-Info.plist
+++ b/ios/Taylr/Support/Taylr-Info.plist
@@ -40,7 +40,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>$(BUNDLE_BUILD)</string>
+	<string>0</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
