Deploy locally to circle artifacts for non-master /prod branches

--- a/circle.yml
+++ b/circle.yml
@@ -33,3 +33,8 @@ deployment:
     branch: prod
     commands:
      - fastlane deploy_prod
+
+  other:
+    branch: /*/
+    commands:
+     - fastlane deploy_other
