--- a/ios/Taylr/Support/Taylr-Info.plist
+++ b/ios/Taylr/Support/Taylr-Info.plist
@@ -40,7 +40,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>0</string>
+	<string>$(BUILD_NUMBER)</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
