use a search bar compatible with RN 0.15

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "apphub": "^0.2.2",
     "ddp-client": "git+https://github.com/s10tv/node-ddp-client.git",
     "lodash": "^3.6.0",
-    "react-native": "^0.14.2",
+    "react-native": "^0.15.0",
     "react-native-button": "^1.2.1",
     "react-native-cookies": "0.0.3",
     "react-native-fabric-digits": "^1.0.6",
@@ -17,7 +17,7 @@
     "react-native-fbsdklogin": "0.0.7",
     "react-native-image-picker": "^0.9.0",
     "react-native-overlay": "^0.3.0",
-    "react-native-search-bar": "^2.5.0",
+    "react-native-search-bar": "git+https://github.com/s10tv/react-native-search-bar.git",
     "react-native-tab-navigator": "^0.2.11",
     "react-native-video": "^0.6.1",
     "regenerator": "^0.8.42",
