--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,7 @@ dependencies:
   pre:
     - brew update
     - brew install node
+    - npm install -g npm@2.14.13 # npm 3 sucks
     - sudo gem update fastlane gym
     - sudo gem install cocoapods -v $(var=$(tail -1 ios/Podfile.lock); echo ${var##COCOAPODS:})
   override:
