--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-native": "^0.15.0",
     "react-native-button": "^1.2.1",
     "react-native-cookies": "0.0.3",
-    "react-native-fabric-digits": "^1.0.6",
+    "react-native-fabric-digits": "git+https://github.com/s10tv/react-native-fabric-digits.git",
     "react-native-fbsdkcore": "0.0.7",
     "react-native-fbsdklogin": "0.0.7",
     "react-native-image-picker": "^0.9.0",
